# ChangeLog for app-crypt/gnupg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.523 2014/07/01 01:19:31 jer Exp $

  01 Jul 2014; Jeroen Roovers <jer@gentoo.org> gnupg-2.0.25.ebuild:
  Stable for HPPA (bug #514718).

  01 Jul 2014; Jeroen Roovers <jer@gentoo.org> gnupg-1.4.18.ebuild:
  Stable for HPPA (bug #514718).

*gnupg-1.4.18 (30 Jun 2014)

  30 Jun 2014; Alon Bar-Lev <alonbl@gentoo.org> +gnupg-1.4.18.ebuild,
  -gnupg-1.4.17.ebuild:
  Version bump, bug#514718

*gnupg-2.0.25 (30 Jun 2014)

  30 Jun 2014; Alon Bar-Lev <alonbl@gentoo.org> +gnupg-2.0.25.ebuild,
  -gnupg-2.0.24.ebuild:
  Version bump, bug#514718

*gnupg-2.0.24 (24 Jun 2014)

  24 Jun 2014; Alon Bar-Lev <alonbl@gentoo.org> +gnupg-2.0.24.ebuild:
  Version bump, bug#514718

*gnupg-1.4.17 (23 Jun 2014)

  23 Jun 2014; Alon Bar-Lev <alonbl@gentoo.org> +gnupg-1.4.17.ebuild:
  Version bump, bug#514718

*gnupg-2.0.23 (06 Jun 2014)

  06 Jun 2014; Tim Harder <radhermit@gentoo.org> +gnupg-2.0.23.ebuild:
  Version bump, add libgcrypt slot operator (bug #494530).

  03 Apr 2014; Michael Haubenwallner <haubi@gentoo.org> gnupg-2.0.22.ebuild:
  Add ~ppc-aix keyword.

  01 Mar 2014; Michał Górny <mgorny@gentoo.org> gnupg-2.0.22.ebuild:
  Update libgcrypt dep to use slot :0.

  21 Feb 2014; Alon Bar-Lev <alonbl@gentoo.org> -gnupg-1.4.15.ebuild:
  Cleanup

  16 Feb 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.16.ebuild:
  Stable for ia64, wrt bug #494658

  16 Feb 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.16.ebuild:
  Stable for alpha, wrt bug #494658

  14 Feb 2014; Markus Meier <maekke@gentoo.org> gnupg-1.4.16.ebuild:
  arm stable, bug #494658

  09 Feb 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.16.ebuild:
  Stable for sparc, wrt bug #494658

  09 Feb 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.16.ebuild:
  Stable for ppc64, wrt bug #494658
