@@ -11,13 +11,13 @@ EBUILD gnupg-1.4.16.ebuild 3763 SHA256 7dd32d6bf5cac515edfaf32f6d8e5c218248490ed
 EBUILD gnupg-1.4.18.ebuild 3770 SHA256 f117da04fe6529bdb0fd6f032a702253d618828ec5af532d34f7cd37eda38059 SHA512 aac4d56cf53b37b7b7345adb25693bbed906459ef88a14319b326d51db460b9ab0ae42c8946ca8c6cdf871ec1bb15c4380bea7e3f8d8839ea4f5e3daf6cdb657 WHIRLPOOL c849950b599af423b47bd14ae7adb019b13f9742c88247ec147c2e0d5439a22810960da5b6df3d6a8ae5d5895bbf0859929052314fea70b12dace03f4ffc31b9
 EBUILD gnupg-2.0.22.ebuild 4736 SHA256 0dc9e63ae57b6859b62714a593359e9c2fa7097a17c2ad93675d597d5b0aea29 SHA512 2f4ea65dafb1e957c165dd684c3279e287ac9ca94eee87da6390ae6c4ad2a99d3791a82597850e2da0725e2de6a0a7d3e6d1192c250f02fe81fe5f78ad1a59bf WHIRLPOOL 3e6ed2773f428e32af127fa09968a066e41564831487bb06ed403467408fa11e9ca6a10a3d7bd4228b0fb3002909e296551948ec77bc934b3ada37ac90028a7b
 EBUILD gnupg-2.0.23.ebuild 4753 SHA256 7be212cef871ea9bd5c044b97679d123ee5c3b1dd30121851576740a826cb500 SHA512 f1d90cff4d82bbeb07b8f566e368d4be11ef9569f64187711de994ed25290e8b21badceb5291bbb6682f141b91cfaea41a8fb205fb5da0de97535aa1e107c6fd WHIRLPOOL 466e2f787423efdd2333cf64620a61f551c075ef95674cd513b02de6a7c89ca633487de119df0d84ae3a2c55ff2e9c7a424aea61a51d11a24ac1a68e93344e86
-EBUILD gnupg-2.0.25.ebuild 4746 SHA256 a11263221a0b7ba0d089afc83f7c26a0c52d76027385456c044997ec717bef43 SHA512 adb2642016a5c1d26052a625887ec611f738468e8e81bfc68a8f353e6f8e0246d854a5a989be989c1db3b36460e90a237f3c2e189933a9e17e5571c704d1274a WHIRLPOOL 8cf56609c6fc4fd264e49ee07f6171eb19be9f9013d732523c1e0aef6d9f88e7c88067d06dba948e37347d730898785b4d94055f614a7c35040ee7237ddfba04
-MISC ChangeLog 76880 SHA256 bd3143ae6e48401c7da0f770f026280bd4463f5a842092f0edee1a486340d5bc SHA512 a435f6e08955aa4333de7696ea48b5172cefb4770cafa09abd0861cd939e32cf24d4bcc696ce0629bf836eef8a7dc859b84de7e7d4ce48a1a9556acb78a1f891 WHIRLPOOL 8cb706bb3e5e8fa9606a8f7d519ff3337bed528b9afcfa5018c6613ec8d1d3d0058315855ca5a585c7043fe40383aac86df2f289a85e0892338ff31dc2724e91
+EBUILD gnupg-2.0.25.ebuild 4747 SHA256 db863745e41195aae4f090984ad6cde5401c99bc98a813ca5ae12ce0412caf89 SHA512 b784993dbdca6943d843a1c45e39fdfc8d25c9cbaa74080392b1e3b9519cba6d1b5d11b4e0682eafb9f8b70b5e731c42089911c4152bde622bb290b93d193b50 WHIRLPOOL 4e3acc2f99f829cabad9a42b50568c92ef4b71d1126d05442e57901be9d368fbbdf472814b5ec6fe11da5cf62bee7b2168927da1c07d3c2079d78e6dc65c5f21
+MISC ChangeLog 76978 SHA256 00484bc835e956d5bb71acc726f9ee2ee4b6d068352981d23dce25758fdf4c81 SHA512 238d0dece7ea854c2ae38288e55198f211766c38b5cde2488702a9f6177d5824ac318ef8dd00080d08ee86b02bf4910d0e621a5c65b49746570af4a64b38aff1 WHIRLPOOL ce257f1bb7a428e38fc213dce1c40f675c5e7eeee4057f1e2406b2bb3af8fc575eecdb7e658a4f89926b8c57afb28766985a55663c1f433cd716c62c8b9cbe07
 MISC metadata.xml 1078 SHA256 6d0df2861d7b3fc7777f9c703b06f789a8e4e4d08a98b1f5f5cc661943a5b7e0 SHA512 2998315ea1dad11806385d84827189efb626620d6596bf51a67180567a5ed3cbcb5eea50de907477b93d876ce66fb7e944cce159fe29450a301cda9bdd76db87 WHIRLPOOL fc0761ee1950b067a4434192c22b3d516017b539694e3615f9429ad8b05ace449e8d9abf01086baf91eb93cb9ad4fe2c37467b0313ccaf0411a99be63a7440e9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlOyDKQACgkQVWmRsqeSphPwGwCfU9d5kW5vEIrEk24SSM1DKLIP
-4KkAn1PJiqzQQtqLOpOghhpEbl9QU2Ef
-=NT+A
+iF4EAREIAAYFAlOyusQACgkQCMFw3lXsEjqMAAD/YLnt+YsUbiy5whtSSTkFv0xl
+0hFix5P7xOR5XHgWqOAA/3Am0v/dZ6rIB8ILgRCaS4JXU1A2DbgVOzLha9a0YpHv
+=nvqi
 -----END PGP SIGNATURE-----
