@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/gnupg
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.523 2014/07/01 01:19:31 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.524 2014/07/01 13:42:24 rich0 Exp $
+
+  01 Jul 2014; Richard Freeman <rich0@gentoo.org> gnupg-2.0.25.ebuild:
+  amd64 stable - 514718
 
   01 Jul 2014; Jeroen Roovers <jer@gentoo.org> gnupg-2.0.25.ebuild:
   Stable for HPPA (bug #514718).
